--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicando GIT</title>
+    <title>Practicando GIT desde VScode</title>
 </head>
 <body>
     <h1>Hola Git Saludos</h1>
     <p>EDTeam</p>
+    <section>Estoy en la rama Test</section>
+    <div>
+        <p>
+            Este cambio fue realizado desde VS code
+        </p>
+    </div>
     
 </body>
 </html>
